Closed Bug 1832986 Opened 1 year ago Closed 1 year ago

Firefox 114 beta do not display SVG pattern if its fill-opacity value is less than 1.

Categories

(Core :: SVG, defect)

Firefox 114
defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox113 --- unaffected
firefox114 --- fixed
firefox115 --- fixed

People

(Reporter: kanuay, Assigned: longsonr)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached image fillopacity.png

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/114.0

Steps to reproduce:

Firefox 114 beta do not display SVG pattern if its fill-opacity value is less than 1.

SVG example :
<svg xmlns='http://www.w3.org/2000/svg' width='670' height='40'>
<defs>
<pattern id='b' width='4' height='4' patternUnits='userSpaceOnUse'>
<path d='M0 4V3l3-3h1zm3 0h1V3z'/>
</pattern>
</defs>
<path fill='url(#b)' fill-opacity='0.15' d='M0 0h670v40H0z'/>
</svg>

Actual results:

This SVG pattern disappears.

Expected results:

This SVG pattern must appears with opacity 0.15

Attached image reporter's testcase
Component: Untriaged → SVG
Product: Firefox → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true

Set release status flags based on info from the regressing bug 1751025

Assignee: nobody → longsonr
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/40016 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch

Comment on attachment 9333518 [details]
Bug 1832986 - Fix patterns with opacity r=emilio

Beta/Release Uplift Approval Request

  • User impact if declined: SVG patterns with opacity don't render
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The regressing bug changes the lifetime of the graphics context amongst other things, this bug simply changes that lifetime back to how it was.
  • String changes made/needed: None
  • Is Android affected?: Yes
Attachment #9333518 - Flags: approval-mozilla-beta?
Upstream PR merged by moz-wptsync-bot

Comment on attachment 9333518 [details]
Bug 1832986 - Fix patterns with opacity r=emilio

Approved for 114 beta 5, thanks.

Attachment #9333518 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: