Bug 1832986 - Fix patterns with opacity r=emilio

The change here is to the lifetime of the gfxContext (and any groups it has) - reverting it to that prior to bug 1751025

I don't know whether that affect SVGClipPathFrame but that's the only other place the lifetime changed that I can see.

Differential Revision: https://phabricator.services.mozilla.com/D177974